package osserc.dt;

option java_package = "com.fictionalrealm.osserc.protocol.datatypes";
option java_multiple_files = true;
option optimize_for = SPEED;

enum ServerStatus {
    ONLINE = 0;
    OFFLINE = 1;
    AUTH_SERVER_OFFLINE = 2;
    MAINTENANCE = 3;
    MAP_SERVER_OFFLINE = 4;
}


enum DisconnectionReason {
    SERVER_SHUTDOWN = 0;
    WRONG_CREDENTIALS = 1;
    TIMEOUT = 2;
    OTHER=3;
    CONNECTION_ERROR=4;
}